# Shader-Animation

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  perf.csv
Shadertoy_Fragment/: CIrcle.frag  cloud_fog_particles.frag  debug_imouse.frag  morph_sphere_cube.frag  shape.frag
build_local/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mouse_controller_test
scripts/: 02_ray_plane.cpp  03_ray_triangle.cpp  04_ray_aabb.cpp  05_ray_obb.cpp  06_mvp_matrices.cpp  07_normal_matrix.cpp  08_homogeneous_coords.cpp  09_phong_blinnphong.cpp  10_pbr_basics.cpp  11_shadow_map.cpp  12_cross_product.cpp  13_barycentric.cpp  14_rotation_quaternion.cpp  15_interpolation.cpp  16_depth_buffer.cpp  17_alpha_blending.cpp  18_mipmap.cpp  19_bvh_simple.cpp  20_advanced_concepts.cpp  README.md  ray_sphere_learning.cpp  run_all.sh  run_ray_sphere_learning.sh
src/: app_options.cpp  app_options.h  frame_profiler.cpp  frame_profiler.h  main.cpp  mouse_controller.cpp  mouse_controller.h  mouse_controller_test.cpp  performance_profiler.cpp  performance_profiler.h  shader.cpp  shader.h
